workloads/weave/namespace.yaml
---

apiVersion: v1
kind: Namespace

metadata:
  name: weave
  annotations:
    cloud.weave.works/version: v1.0.0-190-g3604e53
  labels:
    app.kubernetes.io/name: weave-scope
