workloads/weave/weave-scope-agent.ds.yaml
---

apiVersion: extensions/v1beta1
kind: DaemonSet

metadata:
  name: weave-scope-agent
  annotations:
    cloud.weave.works/launcher-info: |-
      {
        "original-request": {
          "url": "/k8s/v1.10/scope.yaml?k8s-version=Q2xpZW50IFZlcnNpb246IHZlcnNpb24uSW5mb3tNYWpvcjoiMSIsIE1pbm9yOiIxNCIsIEdpdFZlcnNpb246InYxLjE0LjAiLCBHaXRDb21taXQ6IjY0MTg1NmRiMTgzNTIwMzNhMGQ5NmRiYzk5MTUzZmEzYjI3Mjk4ZTUiLCBHaXRUcmVlU3RhdGU6ImNsZWFuIiwgQnVpbGREYXRlOiIyMDE5LTAzLTI2VDAwOjA0OjUyWiIsIEdvVmVyc2lvbjoiZ28xLjEyLjEiLCBDb21waWxlcjoiZ2MiLCBQbGF0Zm9ybToiZGFyd2luL2FtZDY0In0KU2VydmVyIFZlcnNpb246IHZlcnNpb24uSW5mb3tNYWpvcjoiMSIsIE1pbm9yOiIxMyIsIEdpdFZlcnNpb246InYxLjEzLjEiLCBHaXRDb21taXQ6ImVlYzU1 [...]
          "date": "Thu Mar 28 2019 19:49:15 GMT+0000 (UTC)"
        },
        "email-address": "support@weave.works"
      }
  labels:
    app.kubernetes.io/name: weave-scope
    weave-cloud-component: scope
    weave-scope-component: agent
  namespace: weave

spec:
  minReadySeconds: 5
  selector:
    matchLabels:
      app.kubernetes.io/name: weave-scope
      weave-cloud-component: scope
      weave-scope-component: agent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: weave-scope
        weave-cloud-component: scope
        weave-scope-component: agent
    spec:
      containers:
        - name: scope-agent
          args:
            - --mode=probe
            - --probe-only
            - --probe.kubernetes.role=host
            - --probe.docker.bridge=docker0
            - --probe.docker=true
            - --probe.no-controls=true
            - --weave=false
            - weave-scope-app.weave.svc.cluster.local:80
          command:
            - /home/weave/scope
          env: []
          image: docker.io/weaveworks/scope:1.10.2
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          securityContext:
            privileged: true
          volumeMounts:
            - name: scope-plugins
              mountPath: /var/run/scope/plugins
            - name: sys-kernel-debug
              mountPath: /sys/kernel/debug
            - name: docker-socket
              mountPath: /var/run/docker.sock
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
      hostPID: true
      tolerations:
        - effect: NoSchedule
          operator: Exists
      volumes:
        - name: scope-plugins
          hostPath:
            path: /var/run/scope/plugins
        - name: sys-kernel-debug
          hostPath:
            path: /sys/kernel/debug
        - name: docker-socket
          hostPath:
            path: /var/run/docker.sock
  updateStrategy:
    type: RollingUpdate
