workloads/weave/weave-scope-app.deploy.yaml
---

apiVersion: apps/v1beta1
kind: Deployment

metadata:
  name: weave-scope-app
  annotations:
    flux.weave.works/automated: "true"
    flux.weave.works/tag.app: semver:~1
  labels:
    app.kubernetes.io/name: weave-scope
    weave-cloud-component: scope
    weave-scope-component: app
  namespace: weave

spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: weave-scope
      weave-cloud-component: scope
      weave-scope-component: app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: weave-scope
        weave-cloud-component: scope
        weave-scope-component: app
    spec:
      containers:
        - name: app
          command: ['/home/weave/scope']
          args:
            - --mode=app
            - --weave=false
          image: weaveworks/scope:1.10.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4040
              protocol: TCP
