workloads/weave/weave-scope-app.svc.yaml
---

apiVersion: v1
kind: Service

metadata:
  name: weave-scope-app
  labels:
    app.kubernetes.io/name: weave-scope
    weave-cloud-component: scope
    weave-scope-component: app
  namespace: weave

spec:
  selector:
    app.kubernetes.io/name: weave-scope
    weave-cloud-component: scope
    weave-scope-component: app
  ports:
    - name: app
      port: 80
      protocol: TCP
      targetPort: 4040
