workloads/weave/weave-scope-app.ingress.yaml
---

apiVersion: extensions/v1beta1
kind: Ingress

metadata:
  name: weave-scope-app
  namespace: weave
  annotations:
    ingress.kubernetes.io/custom-response-headers: X-Service:weave-scope
    traefik.ingress.kubernetes.io/redirect-regex: ^https?://status.stevenxie.com/(.*)
    traefik.ingress.kubernetes.io/redirect-replacement: https://status.stevenxie.me/$1
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
  labels:
    app.kubernetes.io/name: weave-scope

spec:
  rules:
    - host: status.stevenxie.me
      http:
        paths:
          - backend:
              serviceName: weave-scope-app
              servicePort: app
    - host: status.stevenxie.com
      http:
        paths:
          - backend:
              serviceName: weave-scope-app
              servicePort: app
